# ProteinStructure_ESP_Thesis

./: .gitignore  CLAUDE.md  README.md  THESISPROCESSES.md  config.template.yaml  environment.yml  nohup_sweep.out  pyg_environment.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature.yml  hotfix.yml  refactoring.yml  thesis_chapter.yml
.github/workflows/: ci.yml
configs/: files.txt
data/: rerun_ids.txt  resultstemp.md  test_ids.txt
data/datasets/: datasetindex.md
data/interim/: interimdata.txt
data/processed/: processeddata.md
data/raw/: rawdata.md
docs/: development_workflow.md  github_setup.md  testing_guide.md
logs/: logsexample.md
notebooks/: data_pipeline_functionality.ipynb  generation_example.py  initial_protein_data_analysis.ipynb  pipeline_functionality.ipynb
notebooks/decisions/: 01_normal_offset_strategy.ipynb  02_ESP_sampling_method_strategy.ipynb  (+10 more)
pipelines/: 04_sample_esp.py  05_evaluate_esp.py  06_build_graphs.py  07_train.py  data_gen_pipeline.py  full_pipeline.py  model_pipeline.py  run_sweep.py
scripts/: 01_download_structure.py  01_download_structures.py  02_run_esp_calculations.py  03_generate_surface.py  04_build_dataset.py  04_sample_esp.py  05_evaluate.py  05_train_model.py  06_evaluate_model.py  06_visualize.py  07_build_graphs.py  08_train.py  09_analyze_model.py  analyze_embeddings.py  analyze_model.py  probe_charges.py  pyvista_visual.py  pyvista_visualization.py  visualization.py
sweeps/: ablation_example.yaml  batching_ablation.yaml
tests/: testsscript.md
(+34 files in other folders)
