[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "ProteinStructure_ESP_Thesis"
version = "0.1.0"
description = "Protein electrostatic surface potential prediction using EGNN"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]